test_results/ohio_broker_error_20250514_051313.txt
Error executing test: False is not true : Failed to extract data from Ohio Broker Direct: 'AdaptiveScraper' object has no attribute '_update_strategy_performance'

Traceback (most recent call last):
  File "/Users/johnny/Downloads/SmartScrape/run_ohio_direct_test.py", line 299, in test_ohio_broker_direct
    self.assertTrue(
    ~~~~~~~~~~~~~~~^
        test_result["success"],
        ^^^^^^^^^^^^^^^^^^^^^^^
        f"Failed to extract data from {site_info['name']}: {test_result.get('error', 'Unknown error')}"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/usr/local/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/unittest/case.py", line 744, in assertTrue
    raise self.failureException(msg)
AssertionError: False is not true : Failed to extract data from Ohio Broker Direct: 'AdaptiveScraper' object has no attribute '_update_strategy_performance'
